--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,9 @@
-/*Style des blocs*/
-
 body {
     margin: 0 4%;
 	background: linear-gradient(to top, rgba(19,45,75,1), rgba(19,45,75,0.7)), url("../images/himalayas5.jpg") fixed top center;
     background-size: cover;
     font-family: 'Open Sans', sans-serif;
+    text-align: justify;
     color: white;
 }  
 
@@ -13,127 +12,10 @@ header {
     padding: 260px 0 50px 0;
 }
 
-section {
-    max-width: 800px;
-    margin: auto;
-}
-
-.flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    flex-wrap: wrap;
-}
-
-.bloc {
-    padding: 20px 4%;
-    background-color: #e8e8e8;
-    color: #1f262c;
-    border-radius: 3px;
-}
-
-footer {
-    padding: 100px 0px 5px 0px;
-    font-size: 0.8rem;
-}
-
-/*Style des titres, textes et séparations*/
-
-h1, h2, hr {
-    text-align: center;
-    text-transform: uppercase;
-}
-
-h1 {
-    font-weight: 800;
-}
-
-h2 {
-    font-weight: 600;
-}
-
-h3, h4 {
-    margin: 20px 10px 10px 0;
-}
-
-hr {
-    width: 50%;
-    color: white;
-}
-
-.date {
-    font-size: 0.8rem;
-    margin: 0 10px 10px 0;
-}
-
-.small {
-    font-size: 0.8rem;
-}
-
-/*Style des champs*/
-
-label {
-    display: none;
-}
-
-.settings {
-    display: inline;
-}
-
-input, textarea {
-    width: 92%;
-    max-width: 400px;
-    padding: 10px;
-    border: none;
-    border-radius: 3px;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 0.8rem;
-}
-
-/*Style des boutons*/
-
-.button, .reportingInfo {
-    width: auto;
-    padding: 3px 7px;
-    background-color: #f18e1c;    
-    border: none;
-    border-radius: 3px;
-    color: white;
-    font-weight: bold;
-    font-size: 0.8rem;
-    text-decoration: none;
-}
-
-.buttonArea {
-    padding-top: 0;
-    margin-top: 8px;
-}
-
-.button:hover {
-    background-color: #f0781c;    
-}
-
-.reportingInfo {
-    background-color: #e2001a;
-    margin: 0 0 8px 0;
-}
-
-footer .button {
-    padding: 5px 7px;
-    background-color: #112433;
-    font-size: 0.7rem;
-}
-
-footer .button:hover {
-    background-color: #0a151e;
-}
-
-/*~~~~~~~~~~~~~~~~~~~~~~~~~ menu ~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
 nav {
     position: fixed;
     top: 0;
-    z-index: 100000000001;
+    z-index: 2;
     width: 100%;
     margin: 0 -4%;
 }
@@ -141,15 +23,11 @@ nav {
 nav ul {
     display: flex;
     justify-content: center;
-    align-items: center; /*ou stretch*/
+    align-items: center;
     list-style-type: none;
     margin: 0;
     padding: 0;    
     background-color: #112433;    
-}
-
-nav li {
-    /*flex-grow: 1;*/
 }
 
 nav a {
@@ -173,55 +51,190 @@ nav input, nav label {
     display: none;
 }
 
-/*~~~~~~~~~~ Media Queries ~~~~~~~~~~
+@media all and (max-width: 600px) {
 
-@media all and (max-width: 768px) {
+    header {
+        height: 300px;
+        padding: 200px 0 50px 0;
+    }
 
     nav label {
         display: block;
-        color: #5cadd3;
-        height: 93px;
-        line-height: 93px;
-        font-size: 30px;
-        text-align: right;
-    }
-
-    .fa-bars:hover {
-        color: #4494bb;
-    }
-
-    nav ul {
-        display: block;
-        position: absolute;
-        top: 94px;
-        width: 80%;
-        padding: 0;
-        background-color: rgba(229, 229, 229, 0.8);
-        border-radius: 0 0 4px 4px;
-        -webkit-transform: scale(0, 1);
-        transform: scale(0, 1);
+        padding: 0px 4%;
+        background-color: #112433;    
+        text-align: center;
+        color: #e8e8e8;
         transition: -webkit-transform 0.3s ease-out;
         transition: transform 0.3s ease-out;
     }
 
-    nav input:checked ~ ul {
-        -webkit-transform: scale(1, 1);
-        transform: scale(1, 1);
+    nav label:hover {
+        color: #f18e1c;
     }
 
-    nav a {
-        height: 30px;
-        line-height: 30px;
-        padding: 0px 0px;
-        border-top: 1px rgba(229, 229, 229, 0.4) solid;
-        text-align: center;
-        color: #272727;
+    nav ul {
+        flex-flow: column wrap;
+        align-items: stretch;
+        transition: -webkit-transform 0.3s ease-out;
+        transition: transform 0.3s ease-out;
     }
 
-    nav a:hover {
-        border-top: none;
-        background-color: #5cadd3;
-        color: white;
-        border-radius: 4px;
+    #labelBackEnd, #ulBackEnd {
+        -webkit-transform: translate(0, -294px);
+        transform: translate(0, -294px);
     }
-}*/
+
+    #labelFrontEnd, #ulFrontEnd {
+        -webkit-transform: translate(0, -175px);
+        transform: translate(0, -175px);
+    }
+
+    nav li {
+        border-bottom: 1px solid rgba(19,45,75,0.7);
+    }
+
+    nav input:checked ~ #ulBackEnd, nav input:checked ~ #ulFrontEnd, nav input:checked ~ #labelBackEnd, nav input:checked ~ #labelFrontEnd {
+        -webkit-transform: translate(0, 0px);
+        transform: translate(0, 0px);
+    }
+}
+
+h1, h2, hr {
+    text-align: center;
+    text-transform: uppercase;
+}
+
+h1 {
+    font-weight: 800;
+}
+
+h2 {
+    font-weight: 600;
+}
+
+hr {
+    width: 50%;
+    color: white;
+}
+
+h3, h4 {
+    margin: 20px 10px 10px 0;
+}
+
+section {
+    max-width: 800px;
+    margin: auto;
+}
+
+#sectionAuthor {
+    padding: 0;
+    border-radius: 5px 5px 3px 3px;
+}
+
+#photoAuthor {
+    width: 100%;
+    border-radius: 3px 3px 0 0;
+}
+
+#textAuthor {
+    padding: 20px 4%;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    flex-wrap: wrap;
+}
+
+.bloc {
+    padding: 20px 4%;
+    background-color: #e8e8e8;
+    color: #1f262c;
+    border-radius: 3px;
+}
+
+.date {
+    font-size: 0.8rem;
+    margin: 0 10px 10px 0;
+}
+
+.small {
+    font-size: 0.8rem;
+}
+
+label {
+    display: none;
+}
+
+.settings {
+    display: inline; /*labels visibles*/
+}
+
+input, textarea {
+    width: 92%;
+    max-width: 400px;
+    padding: 10px;
+    border: none;
+    border-radius: 3px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 0.8rem;
+}
+
+.buttonArea {
+    padding-top: 0;
+    margin-top: 8px;
+}
+
+.button, .reportingInfo {
+    width: auto;
+    padding: 3px 7px;
+    background-color: #f18e1c;    
+    border: none;
+    border-radius: 3px;
+    color: white;
+    font-weight: bold;
+    font-size: 0.8rem;
+    text-decoration: none;
+}
+
+.reportingInfo {
+    background-color: #e2001a;
+    margin: 0 0 8px 0;
+}
+
+.button:hover {
+    background-color: #f0781c;    
+}
+
+footer {
+    padding: 100px 0px 20px 0px;
+    font-size: 0.8rem;
+    text-align: center;
+}
+
+footer .button {
+    padding: 5px 7px;
+    background-color: #112433;
+    font-size: 0.7rem;
+}
+
+footer .button:hover {
+    background-color: #0a151e;
+}
+
+#footerBackEnd {
+    justify-content: flex-start;
+}
+
+.logo {
+    width: auto;
+    height: 60px;
+}
+
+@media all and (max-width: 520px) {
+    
+    .footerFrontEnd, #footerBackEnd {
+        justify-content: center;
+    }
+}
